# stata_pipeline_map

./: .gitignore  CLAUDE.md  HANDOVER_MISSING_OUTPUTS.md  README.md  edit_exclusions.py  inspect_pipeline.py  make_pipeline.py  manage_clusters.py  pipeline_user_settings.yaml  pyproject.toml  run_phase1_cli.py  setup_project.py
docs/: configuration.md  development.md  interactive_wrappers.md  migration.md
example/: README.md
pubrepo/: README.md  pyproject.toml
skills/: pipeline-clusters.md  pipeline-inspect.md  pipeline-manual-edges.md  pipeline-setup.md
tests/: adversarial_sections_report.md  conftest.py  test_csg02_stata_cross_script_globals.py  test_csg04_r_cross_script_globals.py  test_csg06_python_cross_script_globals.py  test_fstring_direction.py  test_manual_edges.py  test_multilanguage_integration.py  test_nh04_pickle_listdir.py  test_nh06_oswalk_openvariable.py  test_nh08_deliverable_classification.py  test_phase12_phase1_features.py  test_phase12_phase2_display.py  test_phase12_phase3_layout.py  test_phase12_phase4_exports_docs.py  test_phase13_phase5_views_and_version_resolution.py  test_phase14_portability_and_loops.py  test_phase15_usability_polish.py  test_phase16_render_image.py  test_phase17_interactive_wrappers.py  test_phase18_dot_render_fixes.py  test_phase2_normalization.py  test_phase3_validation.py  test_phase5_clustering.py  test_phase6_manual_clusters.py  test_phase7_cluster_export.py  test_phase8_manual_cluster_validation.py  test_phase9_regression.py  test_python_parser.py  test_r_parser.py  test_section_extract.py  test_silent_drop.py  (+2 more)
(+413 files in other folders)
