[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipeline-flow"
version = "0.1.0"
description = "Stata pipeline lineage, clustering, validation, and documentation-ready rendering tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6"]


[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
data-pipeline-flow = "data_pipeline_flow.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
